--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <title>React App</title>
     <!-- Ajouter Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
